--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
+<div id="line"><hr></div>
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
